[package]
name = "object-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-idp = { git = "https://github.com/wavey-ai/hyper-idp.git" }
tokio = { version = "1.37.0", features = ["full"] }
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.3.1", features = ["full"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.4", features = ["json"] }
tracing = "0.1.40"
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.5.0"
regex = "1.10.2"
http-body-util = "0.1.1"
rustls = { version = "0.21.0", features = ["quic"] }
tokio-rustls = "0.26.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.117"
cookie = "0.18.1"
h3-quinn = { git = "https://github.com/hyperium/h3.git", rev = "eb79204" }
quinn = { version = "0.10", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "ring",
] }
h3 = { git = "https://github.com/hyperium/h3.git", rev = "eb79204" }
store-stream = { git = "ssh://git@github.com/wavey-ai/store-stream.git" }
futures = "0.3.30"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
url = "2.5.0"
thiserror = "1.0.61"
svix-ksuid = "0.8.0"
anyhow = "1.0.86"
tls-helpers = "0.1.3"
